# swagger.yml
@@ -4,74 +4,74 @@ info:
   title: TestCalculator
   description: |
     # TestCalculator - RestAPI service for execute simple math operations
+basePath: /v1
 
 paths:
-  /v1:
-    /addition:
-      post:
-        operationId: Addition
-        summary: "addition of two variables"
-        requestBody:
+  /addition:
+    post:
+      operationId: Addition
+      summary: "addition of two variables"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RequestArgs"
+      responses:
+        "200":
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/RequestArgs"
-        responses:
-          "200":
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ExecutionResult'
-    /difference:
-      post:
-        operationId: Difference
-        summary: "difference of two variables"
-        requestBody:
+                $ref: '#/components/schemas/ExecutionResult'
+  /difference:
+    post:
+      operationId: Difference
+      summary: "difference of two variables"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RequestArgs"
+      responses:
+        "200":
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/RequestArgs"
-        responses:
-          "200":
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ExecutionResult'
-    /multiplication:
-      post:
-        operationId: Multiplication
-        summary: "multiplication of two variables"
-        requestBody:
+                $ref: '#/components/schemas/ExecutionResult'
+  /multiplication:
+    post:
+      operationId: Multiplication
+      summary: "multiplication of two variables"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RequestArgs"
+      responses:
+        "200":
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/RequestArgs"
-        responses:
-          "200":
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ExecutionResult'
-    /division:
-      operationId: Division
-        summary: "Division of two variables"
-        requestBody:
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/RequestArgs"
-        responses:
-          "200":
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ExecutionResult'
+                $ref: '#/components/schemas/ExecutionResult'
+  /division:
+    operationId: Division
+    summary: "Division of two variables"
+    requestBody:
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/RequestArgs"
+    responses:
+      "200":
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExecutionResult'
 
 components:
   schemas:
     varyDecimal:
       type: string
-      pattern: '^\d{1,}\.\d{1,6}$'
+      pattern: '^\d{1,}(\.?\d{1,6}$)?'
 
     RequestArgs:
       type: object
@@ -86,8 +86,8 @@ components:
 
     ExecutionResult:
       type: object
-        required:
-          - result
-        properties:
-          result:
-            type: string
+      required:
+        - result
+      properties:
+        result:
+          type: string
